[FIXED] Transition mobile menu
The inbound transition of the floating menu is slower than the inbound
transition of the overlay.

--- a/src/assets/style/_header.scss
+++ b/src/assets/style/_header.scss
@@ -103,7 +103,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    transition: all 0.3s linear;
+    transition: all 0.2s ease-out;
     @include mq-min-width(map-get($breakpoints, md)) {
         display: none;
     }
@@ -112,7 +112,6 @@
         @include flex(row, flex-end, flex-start);
         @include size(auto, 300px);
         padding-right: 7%;
-        transition: all 0.6s linear;
         #mobile-menu {
             background-color: $clp-black-transp;
             @include text($font-poppins, 25px, 500, $clp-white);
@@ -120,11 +119,12 @@
             line-height: 50px;
             margin-top: 10px;
             border-radius: 15px;
+            transition: all 0.5s ease-in;
             p:hover {
                 background-color: $clp-purple-transp;
                 border-radius: 15px;
                 cursor: pointer;
-                transition: all 0.2s linear;
+                transition: all 0.2s ease-in-out;
             }
             p {
                 padding: 0 10px;
